# elliptic_rings

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  test_special.py
include/: er_array.hpp  er_defines.hpp  er_math.hpp  er_ring.hpp
src/: er_array.cpp  er_math.cpp  er_ring.cpp  main.cpp
